# pyavt

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
avt/: __init__.py  avt.pyi  parser.py  terminal.py  util.py
avt/_avt/: __init__.pyi  parser.pyi  terminal.pyi  util.pyi
src/: lib.rs  parser.rs  terminal.rs  util.rs  utils.rs
