[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "pyavt"
description = "Python bindings for the AVT virtual terminal emulator"
authors = [{ name = "abel1502" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
keywords = ["avt", "terminal", "ansi", "bindings", "rust", "pyo3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals",
    "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/abel1502/pyavt"
Repository = "https://github.com/abel1502/pyavt"
Issues = "https://github.com/abel1502/pyavt/issues"

[tool.maturin]
module-name = "avt._avt"
